service - character-service - character status