@@ -7,17 +7,20 @@ import org.jetbrains.annotations.NotNull;
 import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.mongodb.core.ReactiveMongoTemplate;
 import org.springframework.data.mongodb.repository.ReactiveMongoRepository;
 import org.springframework.data.mongodb.repository.support.ReactiveMongoRepositoryFactory;
-import org.springframework.data.util.Streamable;
 import org.springframework.http.HttpEntity;
 import org.springframework.stereotype.Component;
 import org.springframework.stereotype.Service;
 import pl.app.character.application.domain.Character;
 import pl.app.character.query.dto.CharacterWithGearDto;
 import pl.app.character.query.dto.LevelDto;
+import pl.app.character_status.application.domain.CharacterStatusType;
+import pl.app.character_status.query.CharacterStatusQueryService;
+import pl.app.character_status.query.dto.CharacterStatusDto;
 import pl.app.common.mapper.BaseMapper;
 import pl.app.common.shared.model.Statistics;
 import pl.app.gear.aplication.domain.Gear;
@@ -25,24 +28,23 @@ import pl.app.gear.dto.GearDto;
 import pl.app.item.http.GearDtoQueryControllerHttpInterface;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
-import reactor.util.function.Tuples;
 
+import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
 class CharacterWithGearQueryServiceImpl implements CharacterWithGearDtoQueryService {
     private final Repository repository;
-    private final GearDtoQueryControllerHttpInterface GearDtoQueryController;
+    private final GearDtoQueryControllerHttpInterface gearDtoQueryController;
+    private final CharacterStatusQueryService characterStatusQueryService;
     private final Mapper mapper;
 
 
-    public CharacterWithGearQueryServiceImpl(Mapper mapper, GearDtoQueryControllerHttpInterface GearDtoQueryController, ReactiveMongoTemplate mongoTemplate) {
-        this.GearDtoQueryController = GearDtoQueryController;
+    public CharacterWithGearQueryServiceImpl(Mapper mapper, CharacterStatusQueryService characterStatusQueryService, GearDtoQueryControllerHttpInterface GearDtoQueryController, ReactiveMongoTemplate mongoTemplate) {
+        this.gearDtoQueryController = GearDtoQueryController;
+        this.characterStatusQueryService = characterStatusQueryService;
         this.mapper = mapper;
         this.repository = new ReactiveMongoRepositoryFactory(mongoTemplate).getRepository(Repository.class);
     }
@@ -50,23 +52,25 @@ class CharacterWithGearQueryServiceImpl implements CharacterWithGearDtoQueryServ
 
     @Override
     public Mono<CharacterWithGearDto> fetchById(@NotNull ObjectId id) {
-        return repository.findById(id)
-                .zipWith(GearDtoQueryController.fetchByDomainObject(id, Gear.LootDomainObjectType.CHARACTER).map(HttpEntity::getBody))
-                .map(t -> mapper.mapToCharacterWithGearDto(t.getT1(), t.getT2()));
+        return Mono.zip(
+                repository.findById(id),
+                gearDtoQueryController.fetchByDomainObject(id, Gear.LootDomainObjectType.CHARACTER).map(HttpEntity::getBody),
+                characterStatusQueryService.fetchByCharacterId(id)
+        ).map(t -> mapper.map(t.getT1(), t.getT2(), t.getT3(), CharacterWithGearDto.class));
     }
 
     @Override
     public Mono<Page<CharacterWithGearDto>> fetchAllByPageable(Pageable pageable) {
-        return repository.findAllBy(pageable)
-                .collect(Collectors.toSet())
-                .map(set -> GearDtoQueryController
-                        .fetchByDomainObject(Gear.LootDomainObjectType.CHARACTER, set.stream().map(Character::getId).collect(Collectors.toList()))
-                        .map(HttpEntity::getBody)
-                        .map(Streamable::get)
-                        .map(s -> s.collect(Collectors.toSet()))
-                        .map(g -> Tuples.of(set, g)))
-                .flatMap(Function.identity())
-                .map(t -> mapper.mapToCharacterWithGearDto(t.getT1(), t.getT2()))
+        return repository.findAllBy(pageable).collect(Collectors.toSet())
+                .flatMap(characters -> {
+                    var characterIds = characters.stream().map(Character::getId).toList();
+                    return Mono.zip(
+                            Mono.just(characters),
+                            gearDtoQueryController.fetchByDomainObject(Gear.LootDomainObjectType.CHARACTER, characterIds).map(HttpEntity::getBody).map(Page::getContent),
+                            characterStatusQueryService.fetchAllByCharacterIds(characterIds, PageRequest.ofSize(Integer.MAX_VALUE)).map(Page::getContent)
+                    );
+                })
+                .map(t -> mapper.mapToCharacterWithGearDto(t.getT1(), t.getT2(), t.getT3()))
                 .zipWith(repository.count())
                 .map(tuple -> new PageImpl<>(tuple.getT1(), pageable, tuple.getT2()));
     }
@@ -76,15 +80,12 @@ class CharacterWithGearQueryServiceImpl implements CharacterWithGearDtoQueryServ
         if (Objects.isNull(ids)) {
             return fetchAllByPageable(pageable);
         }
-        return repository.findAllById(ids)
-                .collect(Collectors.toSet())
-                .zipWith(GearDtoQueryController
-                        .fetchByDomainObject(Gear.LootDomainObjectType.CHARACTER, ids)
-                        .map(HttpEntity::getBody)
-                        .map(Streamable::get)
-                        .map(s -> s.collect(Collectors.toSet()))
-
-                ).map(t -> mapper.mapToCharacterWithGearDto(t.getT1(), t.getT2()))
+        return Mono.zip(
+                        repository.findAllById(ids).collectList(),
+                        gearDtoQueryController.fetchByDomainObject(Gear.LootDomainObjectType.CHARACTER, ids).map(HttpEntity::getBody).map(Page::getContent),
+                        characterStatusQueryService.fetchAllByCharacterIds(ids, PageRequest.ofSize(Integer.MAX_VALUE)).map(Page::getContent)
+                )
+                .map(t -> mapper.mapToCharacterWithGearDto(t.getT1(), t.getT2(), t.getT3()))
                 .zipWith(repository.count())
                 .map(tuple -> new PageImpl<>(tuple.getT1(), pageable, tuple.getT2()));
     }
@@ -96,14 +97,20 @@ class CharacterWithGearQueryServiceImpl implements CharacterWithGearDtoQueryServ
 
         @PostConstruct
         void init() {
+            addMapper(Character.class, CharacterWithGearDto.class, this::mapToCharacterWithGearDto);
+            addMapper(Character.class, GearDto.class, CharacterWithGearDto.class, this::mapToCharacterWithGearDto);
+            addMapper(Character.class, GearDto.class, CharacterStatusDto.class, CharacterWithGearDto.class, this::mapToCharacterWithGearDto);
         }
-        public List<CharacterWithGearDto> mapToCharacterWithGearDto(Set<Character> characters, Set<GearDto> gears){
+
+        public List<CharacterWithGearDto> mapToCharacterWithGearDto(Collection<Character> characters, Collection<GearDto> gears, Collection<CharacterStatusDto> statuses) {
             return characters.stream().map(character -> {
-                Optional<GearDto> gear = gears.stream().filter(g -> g.getId().equals(character.getId())).findAny();
-                return gear.map(characterGearDto -> mapToCharacterWithGearDto(character, characterGearDto)).orElse(mapToCharacterWithGearDto(character));
+                var gear = gears.stream().filter(g -> g.getId().equals(character.getId())).findAny().orElse(new GearDto());
+                var status = statuses.stream().filter(g -> g.getCharacterId().equals(character.getId())).findAny().orElse(new CharacterStatusDto(null, CharacterStatusType.IDLE));
+                return map(character, gear, status, CharacterWithGearDto.class);
             }).collect(Collectors.toList());
         }
-        public CharacterWithGearDto mapToCharacterWithGearDto(Character character, GearDto gear) {
+
+        CharacterWithGearDto mapToCharacterWithGearDto(Character character, GearDto gear, CharacterStatusDto status) {
             Statistics baseStatistic = character.getStatistics();
             Statistics gearStatistic = gear.getStatistic();
             Statistics sumStatistics = new Statistics().add(baseStatistic).add(gearStatistic);
@@ -119,10 +126,33 @@ class CharacterWithGearQueryServiceImpl implements CharacterWithGearDtoQueryServ
                     Statistics.getHp(sumStatistics.getPersistence(), character.getProfession()),
                     Statistics.getDef(sumStatistics.getDurability(), character.getProfession()),
                     Statistics.getAttackPower(sumStatistics.getStrength(), character.getProfession()),
-                    gear
+                    gear,
+                    status.getType()
             );
         }
-        public CharacterWithGearDto mapToCharacterWithGearDto(Character character) {
+
+        CharacterWithGearDto mapToCharacterWithGearDto(Character character, GearDto gear) {
+            Statistics baseStatistic = character.getStatistics();
+            Statistics gearStatistic = gear.getStatistic();
+            Statistics sumStatistics = new Statistics().add(baseStatistic).add(gearStatistic);
+
+            return new CharacterWithGearDto(
+                    character.getId(),
+                    character.getName(),
+                    character.getProfession(),
+                    character.getRace(),
+                    character.getImageId(),
+                    new LevelDto(character.getLevel().getLevel(), character.getLevel().getExp()),
+                    baseStatistic, gearStatistic, sumStatistics,
+                    Statistics.getHp(sumStatistics.getPersistence(), character.getProfession()),
+                    Statistics.getDef(sumStatistics.getDurability(), character.getProfession()),
+                    Statistics.getAttackPower(sumStatistics.getStrength(), character.getProfession()),
+                    gear,
+                    CharacterStatusType.IDLE
+            );
+        }
+
+        CharacterWithGearDto mapToCharacterWithGearDto(Character character) {
             Statistics baseStatistic = character.getStatistics();
             Statistics gearStatistic = Statistics.zero();
             Statistics sumStatistics = new Statistics().add(baseStatistic).add(gearStatistic);
@@ -138,7 +168,8 @@ class CharacterWithGearQueryServiceImpl implements CharacterWithGearDtoQueryServ
                     Statistics.getHp(sumStatistics.getPersistence(), character.getProfession()),
                     Statistics.getDef(sumStatistics.getDurability(), character.getProfession()),
                     Statistics.getAttackPower(sumStatistics.getStrength(), character.getProfession()),
-                    new GearDto()
+                    new GearDto(),
+                    CharacterStatusType.IDLE
             );
         }
     }
