@@ -1,6 +1,5 @@
 package pl.app.family.query;
 
-import pl.app.family.application.domain.Family;
 import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
 import org.bson.types.ObjectId;
@@ -19,10 +18,12 @@ import org.springframework.stereotype.Component;
 import org.springframework.stereotype.Service;
 import pl.app.character.application.domain.Character;
 import pl.app.character.query.dto.CharacterWithGearDto;
-import pl.app.character.query.dto.LevelDto;
+import pl.app.character_status.application.domain.CharacterStatusType;
+import pl.app.character_status.query.CharacterStatusQueryService;
+import pl.app.character_status.query.dto.CharacterStatusDto;
 import pl.app.common.mapper.BaseMapper;
-import pl.app.common.shared.model.Statistics;
 import pl.app.equipment.dto.EquipmentDto;
+import pl.app.family.application.domain.Family;
 import pl.app.family.query.dto.FamilyWithGearDto;
 import pl.app.gear.dto.GearDto;
 import pl.app.item.http.EquipmentQueryControllerHttpInterface;
@@ -30,9 +31,9 @@ import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import reactor.util.function.Tuples;
 
+import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -41,38 +42,38 @@ import java.util.stream.Collectors;
 class FamilyWithGearQueryServiceImpl implements FamilyWithGearDtoQueryService {
     private final Repository repository;
     private final EquipmentQueryControllerHttpInterface godEquipmentQueryController;
+    private final CharacterStatusQueryService characterStatusQueryService;
     private final Mapper mapper;
 
 
-    public FamilyWithGearQueryServiceImpl(Mapper mapper, EquipmentQueryControllerHttpInterface godEquipmentQueryController, ReactiveMongoTemplate mongoTemplate) {
+    public FamilyWithGearQueryServiceImpl(Mapper mapper, CharacterStatusQueryService characterStatusQueryService, EquipmentQueryControllerHttpInterface godEquipmentQueryController, ReactiveMongoTemplate mongoTemplate) {
         this.mapper = mapper;
         this.godEquipmentQueryController = godEquipmentQueryController;
+        this.characterStatusQueryService = characterStatusQueryService;
         this.repository = new ReactiveMongoRepositoryFactory(mongoTemplate).getRepository(Repository.class);
     }
 
     @Override
     public Mono<FamilyWithGearDto> fetchByGodId(@NotNull ObjectId godId) {
-        return repository.findByGodId(godId)
-                .zipWith(godEquipmentQueryController
-                        .fetchByGodId(godId)
-                        .map(HttpEntity::getBody)
-                ).map(t -> mapper.mapToGodFamilyWithGearDto(t.getT1(), t.getT2()));
+        return Mono.zip(
+                        repository.findByGodId(godId),
+                        godEquipmentQueryController.fetchByGodId(godId).map(HttpEntity::getBody)
+                )
+                .flatMap(t -> {
+                    var characterIds = t.getT1().getCharacters().stream().map(Character::getId).toList();
+                    var characterStatuses = characterStatusQueryService.fetchAllByCharacterIds(characterIds);
+                    return characterStatuses.map(e -> Tuples.of(t.getT1(), t.getT2(), e));
+                })
+                .map(t -> mapper.mapToGodFamilyWithGearDto(t.getT1(), t.getT2(), t.getT3()));
     }
 
     @Override
     public Mono<Page<FamilyWithGearDto>> fetchAllByPageable(Pageable pageable) {
-        return repository.findAllBy(pageable)
-                .collect(Collectors.toSet())
-                .map(set -> godEquipmentQueryController
-                        .fetchAllByGodIds(set.stream().map(Family::getGodId).collect(Collectors.toList()))
-                        .map(HttpEntity::getBody)
-                        .map(Streamable::get)
-                        .map(s -> s.collect(Collectors.toSet()))
-                        .map(g -> Tuples.of(set, g)))
-                .flatMap(Function.identity())
-                .map(t -> mapper.mapToGodFamilyWithGearDto(t.getT1(), t.getT2()))
-                .zipWith(repository.count())
-                .map(tuple -> new PageImpl<>(tuple.getT1(), pageable, tuple.getT2()));
+        return repository.findAllBy(pageable).collect(Collectors.toSet())
+                .flatMap(families -> {
+                    var godIds = families.stream().map(Family::getGodId).toList();
+                    return this.fetchAllByGodIds(godIds, pageable);
+                });
     }
 
     @Override
@@ -80,14 +81,21 @@ class FamilyWithGearQueryServiceImpl implements FamilyWithGearDtoQueryService {
         if (Objects.isNull(godIds)) {
             return fetchAllByPageable(pageable);
         }
-        return repository.findAllByGodId(godIds, pageable)
-                .collect(Collectors.toSet())
-                .zipWith(godEquipmentQueryController
-                        .fetchAllByGodIds(godIds)
-                        .map(HttpEntity::getBody)
-                        .map(Streamable::get)
-                        .map(s -> s.collect(Collectors.toSet()))
-                ).map(t -> mapper.mapToGodFamilyWithGearDto(t.getT1(), t.getT2()))
+        return Mono.zip(
+                        repository.findAllByGodId(godIds, pageable).collect(Collectors.toSet()),
+                        godEquipmentQueryController
+                                .fetchAllByGodIds(godIds)
+                                .map(HttpEntity::getBody)
+                                .map(Streamable::toSet)
+                )
+                .flatMap(t -> {
+                    var characterIds = t.getT1().stream().map(Family::getCharacters)
+                            .map(characters -> characters.stream().map(Character::getId).toList())
+                            .flatMap(List::stream).toList();
+                    var characterStatuses = characterStatusQueryService.fetchAllByCharacterIds(characterIds);
+                    return characterStatuses.map(e -> Tuples.of(t.getT1(), t.getT2(), e));
+                })
+                .map(t -> mapper.mapToGodFamilyWithGearDto(t.getT1(), t.getT2(), t.getT3()))
                 .zipWith(repository.count())
                 .map(tuple -> new PageImpl<>(tuple.getT1(), pageable, tuple.getT2()));
     }
@@ -102,48 +110,26 @@ class FamilyWithGearQueryServiceImpl implements FamilyWithGearDtoQueryService {
         void init() {
         }
 
-        public List<FamilyWithGearDto> mapToGodFamilyWithGearDto(Set<Family> families, Set<EquipmentDto> equipments) {
+        public List<FamilyWithGearDto> mapToGodFamilyWithGearDto(Set<Family> families, Set<EquipmentDto> equipments, Collection<CharacterStatusDto> statuses) {
             return families.stream().map(family -> {
-                Optional<EquipmentDto> equipment = equipments.stream().filter(e -> e.getGodId().equals(family.getGodId())).findAny();
-                return equipment.map(e -> new FamilyWithGearDto(
-                        family.getGodId(),
-                        mapToCharacterWithGearDto(family.getCharacters(), e.getCharacterGears())
-                )).orElse(null);
+                var equipment = equipments.stream().filter(e -> e.getGodId().equals(family.getGodId())).findAny().orElse(new EquipmentDto());
+                return mapToGodFamilyWithGearDto(family, equipment, statuses);
             }).collect(Collectors.toList());
         }
 
-        public FamilyWithGearDto mapToGodFamilyWithGearDto(Family family, EquipmentDto equipment) {
+        public FamilyWithGearDto mapToGodFamilyWithGearDto(Family family, EquipmentDto equipment, Collection<CharacterStatusDto> statuses) {
             return new FamilyWithGearDto(
                     family.getGodId(),
-                    mapToCharacterWithGearDto(family.getCharacters(), equipment.getCharacterGears())
+                    mapToCharacterWithGearDto(family.getCharacters(), equipment.getCharacterGears(), statuses)
             );
         }
 
-        public Set<CharacterWithGearDto> mapToCharacterWithGearDto(Set<Character> characters, Set<GearDto> gears) {
+        public List<CharacterWithGearDto> mapToCharacterWithGearDto(Collection<Character> characters, Collection<GearDto> gears, Collection<CharacterStatusDto> statuses) {
             return characters.stream().map(character -> {
-                Optional<GearDto> gear = gears.stream().filter(g -> g.getId().equals(character.getId())).findAny();
-                return gear.map(characterGearDto -> mapToCharacterWithGearDto(character, characterGearDto)).orElse(null);
-            }).collect(Collectors.toSet());
-        }
-
-        public CharacterWithGearDto mapToCharacterWithGearDto(Character character, GearDto gear) {
-            Statistics baseStatistic = character.getStatistics();
-            Statistics gearStatistic = gear.getStatistic();
-            Statistics sumStatistics = new Statistics().add(baseStatistic).add(gearStatistic);
-
-            return new CharacterWithGearDto(
-                    character.getId(),
-                    character.getName(),
-                    character.getProfession(),
-                    character.getRace(),
-                    character.getImageId(),
-                    new LevelDto(character.getLevel().getLevel(), character.getLevel().getExp()),
-                    baseStatistic, gearStatistic, sumStatistics,
-                    Statistics.getHp(sumStatistics.getPersistence(), character.getProfession()),
-                    Statistics.getDef(sumStatistics.getDurability(), character.getProfession()),
-                    Statistics.getAttackPower(sumStatistics.getStrength(), character.getProfession()),
-                    gear
-            );
+                var gear = gears.stream().filter(g -> g.getId().equals(character.getId())).findAny().orElse(new GearDto());
+                var status = statuses.stream().filter(g -> g.getCharacterId().equals(character.getId())).findAny().orElse(new CharacterStatusDto(null, CharacterStatusType.IDLE));
+                return map(character, gear, status, CharacterWithGearDto.class);
+            }).collect(Collectors.toList());
         }
     }
 
